Name: data-memocombinators
Description:
    Combinators for building memo tables.
Version: 0.3
Stability: experimental
Synopsis: Combinators for building memo tables.
License: BSD3
Category: Data
Author: Luke Palmer
Maintainer: lrpalmer@gmail.com
Build-Type: Simple
Build-Depends: base, array
Exposed-Modules: Data.MemoCombinators
Extensions: Rank2Types, ScopedTypeVariables
